script random cp code + style html-css

--- a/index.html
+++ b/index.html
@@ -10,36 +10,66 @@
 </head>
 
 <body>
-    <h2 class="mb-3">Inserisci i tuoi dati di viaggio:</h2>
-    <div class="mb-3">
-        <label for="name">Nome Passeggero: </label>
-        <input type="text" id="name">
-    </div>
-    <div class="mb-3">
-        <label for="km">Distanza percorso in Km: </label>
-        <input type="number" id="km" value="10" min="10" step="5">
-    </div>
-    <div class="mb-3">
-        <label for="age">Fascia d'età: </label>
-        <select id="age">
-            <option value="min">Minorenne (1-17)</option>
-            <option selected value="maj">Maggiorenne (18-65)</option>
-            <option value="over65">Over 65 anni</option>
-        </select>
-    </div>
-    <div class="mb-3">
-        <button type="button" id="button">Genera Biglietto</button>
-        <button type="button" id="reset-button">Resetta</button>
-    </div>
+    <!-- sezione form genera biglietto -->
+    <h2 class="mb-3 font-white text-center">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h2>
+    <section class="container-top text-center">
+        <div class="row">
+            <div class="mb-3">
+                <label for="name">Nome Cognome</label>
+                <input type="text" id="name" class="mt-3 text-center">
+            </div>
+            <div class="mb-3">
+                <label for="km" class="mb-3">Km da percorrere</label>
+                <input type="number" id="km" value="10" min="10" step="5" class="mt-3 text-center">
+            </div>
+            <div class="mb-3">
+                <label for="age" class="mb-3">Fascia d'età</label>
+                <select id="age" class="mt-3">
+                    <option value="min">Minorenne (1-17)</option>
+                    <option selected value="maj">Maggiorenne (18-65)</option>
+                    <option value="over65">Over 65 anni</option>
+                </select>
+            </div>
+        </div>
 
-    <hr class="mb-3">
-    <section id="ticket-section" class="hidden">
-        <h2 class="mb-3">Il tuo biglietto</h2>
-        <p><strong>Nome Passeggero: </strong><span id="pass-name" class="ticket-info"></span></p>
-        <p><strong>Offerta: </strong><span id="discount-element" class="ticket-info"></span></p>
-        <p><strong>Carrozza: </strong><span id="car" class="ticket-info"></span></p>
-        <p><strong>Codice Treno: </strong><span id="train-code" class="ticket-info"></span></p>
-        <p><strong>Prezzo del Biglietto: </strong><span id="ticket-price" class="ticket-info"></span></p>
+        <!-- button del form -->
+        <div class=" row-button mt-3">
+            <button type="button" id="button">Genera</button>
+            <button type="button" id="reset-button">Annulla</button>
+        </div>
+    </section>
+
+    <!-- sezione biglietto hidden -->
+    <section id="ticket-section" class="mt-4">
+        <h2 class="mb-3 font-white text-center">IL TUO BIGLIETTO</h2>
+
+        <div class="container-bottom">
+            <h3>DETTAGLIO PASSEGGERI</h3>
+            <div class="row-ticket">
+                <div class="col-left">
+                    <p>NOME PASSEGGERO:</p>
+                    <p id="pass-name" class="ticket-info mt-3"></p>
+                </div>
+                <div class="col-right">
+                    <div class="col">
+                        <p><strong>Offerta</strong></p>
+                        <p id="discount-element" class="ticket-info"></p>
+                    </div>
+                    <div class="col">
+                        <p><strong>Carrozza</strong></p>
+                        <p id="car" class="ticket-info"></p>
+                    </div>
+                    <div class="col">
+                        <p><strong>Codice CP</strong></p>
+                        <p id="train-code" class="ticket-info"></p>
+                    </div>
+                    <div class="col">
+                        <p><strong>Costo biglietto</strong></p>
+                        <p id="ticket-price" class="ticket-info"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
     <script src="./js/script.js"></script>
 </body>
