fixed class html

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </section>
 
     <!-- sezione biglietto hidden -->
-    <section id="ticket-section" class="mt-4">
-        <h2 class="mb-3 font-white text-center">IL TUO BIGLIETTO</h2>
+    <section id="ticket-section" class="mt-4 hidden">
+        <h2 class="font-white text-center">IL TUO BIGLIETTO</h2>
 
         <div class="container-bottom">
             <h3>DETTAGLIO PASSEGGERI</h3>
