--- a/index.html
+++ b/index.html
@@ -11,31 +11,34 @@
 
 <body>
     <!-- sezione form genera biglietto -->
-    <h2 class="mb-3 font-white text-center">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h2>
-    <section class="container-top text-center">
-        <div class="row">
-            <div class="mb-3">
-                <label for="name">Nome Cognome</label>
-                <input type="text" id="name" class="mt-3 text-center">
-            </div>
-            <div class="mb-3">
-                <label for="km" class="mb-3">Km da percorrere</label>
-                <input type="number" id="km" value="10" min="10" step="5" class="mt-3 text-center">
-            </div>
-            <div class="mb-3">
-                <label for="age" class="mb-3">Fascia d'età</label>
-                <select id="age" class="mt-3">
-                    <option value="min">Minorenne (1-17)</option>
-                    <option selected value="maj">Maggiorenne (18-65)</option>
-                    <option value="over65">Over 65 anni</option>
-                </select>
-            </div>
-        </div>
+    <section>
+        <h2 class="mb-3 font-white text-center">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h2>
 
-        <!-- button del form -->
-        <div class=" row-button mt-3">
-            <button type="button" id="button">Genera</button>
-            <button type="button" id="reset-button">Annulla</button>
+        <div class="container-top text-center">
+            <div class="row">
+                <div class="mb-3">
+                    <label for="name">Nome Cognome</label>
+                    <input type="text" id="name" class="mt-3 text-center">
+                </div>
+                <div class="mb-3">
+                    <label for="km" class="mb-3">Km da percorrere</label>
+                    <input type="number" id="km" value="10" min="10" step="5" class="mt-3 text-center">
+                </div>
+                <div class="mb-3">
+                    <label for="age" class="mb-3">Fascia d'età</label>
+                    <select id="age" class="mt-3">
+                        <option value="min">Minorenne (1-17)</option>
+                        <option selected value="maj">Maggiorenne (18-65)</option>
+                        <option value="over65">Over 65 anni</option>
+                    </select>
+                </div>
+            </div>
+
+            <!-- button del form -->
+            <div class=" row-button mt-3">
+                <button type="button" id="button">Genera</button>
+                <button type="button" id="reset-button">Annulla</button>
+            </div>
         </div>
     </section>
 
