--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body>
     <!-- sezione form genera biglietto -->
     <section>
-        <h2 class="mb-3 font-white text-center">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h2>
+        <div id="alert" class="hidden">I valori inseriti non sono corretti</div>
+        <h2 class="mb-3 text-center">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h2>
 
         <div class="container-top text-center">
             <div class="row">
@@ -44,7 +45,7 @@
 
     <!-- sezione biglietto hidden -->
     <section id="ticket-section" class="mt-4 hidden">
-        <h2 class="font-white text-center">IL TUO BIGLIETTO</h2>
+        <h2 class="text-center">IL TUO BIGLIETTO</h2>
 
         <div class="container-bottom">
             <h3>DETTAGLIO PASSEGGERI</h3>
