--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
     <!-- sezione form genera biglietto -->
     <section>
-        <div id="alert" class="hidden">I valori inseriti non sono corretti</div>
+        <div id="alert" class="hidden">
+            <div>I valori inseriti non sono corretti</div>
+            <div id="alert-x">&times;</div>
+        </div>
         <h2 class="mb-3 text-center">CALCOLA IL PREZZO DEL TUO BIGLIETTO</h2>
 
         <div class="container-top text-center">
